fixing dark mode colors title

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -48,7 +48,7 @@
     background-color: #FFFFFF;
 
     &__title {
-      color: #6A7985;
+      color: #6d8598;
     }
   }
 
@@ -90,13 +90,13 @@
     background-color: #1a2230;
 
     &__title {
-      color: #6A7985;
+      color: #6d8598;
     }
   }
 
   .info {
     &__title {
-      color: #6A7985;
+      color: #6d8598;
     }
 
     &__email,
@@ -117,13 +117,13 @@
     background-color: #1721264f;
 
     &__title {
-      color: #6A7985;
+      color: #6d8598;
     }
   }
 
   .item {
     background-color: #181b1e7b !important;
-    color: #6A7985 !important;
+    color: #6d8598 !important;
   }
 
   .my-card {
@@ -131,15 +131,15 @@
   }
 
   .card-typography {
-    color: #6A7985;
+    color: #6d8598;
   }
 
   .card-title {
-    color: #6A7985;
+    color: #6d8598;
   }
 
   .border-line {
-    border: 1px solid #6A7985;
+    border: 1px solid #6d8598;
   }
 
   .main-container-page-dark {
@@ -151,7 +151,7 @@
   }
 
   .icn-style {
-    color: #6A7985 !important;
+    color: #6d8598 !important;
   }
 
   .btn-background-dark {
@@ -308,7 +308,7 @@
 
 .border-bottom {
   border-width: 0 0 1px 0 !important;
-  border: solid #6a798588;
+  border: solid #6d859888;
 }
 
 .tabs-style {
