--- a/src/css/form.scss
+++ b/src/css/form.scss
@@ -55,10 +55,10 @@
 .body--dark {
   .form {
     &__item-label {
-      color: #6A7985;
+      color: #6d8598;
 
       &__title {
-        color: #6A7985;
+        color: #6d8598;
       }
     }
 
@@ -73,7 +73,7 @@
     }
 
     &__date {
-      color: #6A7985;
+      color: #6d8598;
     }
 
     &__date_container {
